[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "talend_task"
version = "0.1.2dev0"
description = "CLI for running ETL jobs (tasks) remotely via Talend Cloud API"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Corey Goldberg"}]
maintainers = [{name = "Corey Goldberg"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["talend", "etl", "database", "api"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "rich==15.0.0",
]

[project.scripts]
talend_task = "talend_task:main"

[project.urls]
homepage = "https://github.com/cgoldberg/talend_task"
source = "https://github.com/cgoldberg/talend_task"
download = "https://pypi.org/project/talend_task"

[dependency-groups]
lint = [
    "black",
    "ruff",
]
validate = [
    "packaging",
    "validate-pyproject",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
respect-gitignore = true
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "I", "PT", "RUF", "TID", "W"
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-line-length = 88
docstring-code-format = true
